# wayland-handson

./: README.md  meson.build
client/: main.c  meson.build
server/: compositor.c  compositor.h  main.c  meson.build
